# repositories-inventory

./: .pre-commit-config.yaml  README.md  REPOS_INVENTORY.md  pyproject.toml  renovate.json
manifests/: old.md  repositories.yaml
scripts/: README.md  generate_inventory_markdown.py  github_auto_approve.py  github_auto_lgtm.py  markdown_to_yaml.py  poetry_tools.py  release_it_repos.py
