[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.poetry]
name = "repositories-inventory"
version = "0.1.0"
description = "General scripts"
authors = ["Meni Yakove <myakove@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.scripts]
release-it-repos = "scripts.release_it_repos:main"
poetry-tools = "scripts.poetry_tools:main"
generate-inventory-markdown = "scripts.generate_inventory_markdown:generate_inventory_markdown"
github-auto-lgtm = "scripts.github_auto_lgtm:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.31.0"
click = "^8.1.7"
rich = "^13.7.1"
python-simple-logger = "^1.0.19"
pyaml-env = "^1.2.1"
pyhelper-utils = "^0.0.27"
pygithub = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
