[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[project]
requires-python = ">=3.9"
name = "repositories-inventory"
version = "0.1.0"
description = "General scripts"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
  "click>=8.1.7",
  "pyaml-env>=1.2.1",
  "pygithub>=2.4.0",
  "pyhelper-utils>=1.0.1",
  "python-simple-logger>=2.0.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "rich>=13.9.4",
]
[project.scripts]
release-it-repos = "scripts.release_it_repos:main"
generate-inventory-markdown = "scripts.generate_inventory_markdown:generate_inventory_markdown"
github-auto-approve = "scripts.github_auto_approve:main"

[[project.authors]]
name = "Meni Yakove"
email = " myakove@gmail.com"

[[project.authors]]
name = "Ruth Netser"
email = "ruth.netser@gmail.com"

[project.urls]
homepage = "https://github.com/myk-org/repositories-inventory"
repository = "https://github.com/myk-org/repositories-inventory"
"Bug Tracker" = "https://github.com/myk-org/repositories-inventory/issues"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = ["ipdb>=0.13.13", "ipython>=8.18.1"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
